--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,7 @@ analyticsconfig:
       - foreign_matter
 
     foreignmatterorganic:
+      - foreignmatterorganic
       - foreign_matter_organic
 
     admixture:
@@ -418,9 +419,11 @@ details:
    KCS:
      customerId: 213
      frequency: daily
-     cronExpression: 0 0/45 * * * ?
+     cronExpression: 0 10 * * * ?
      emails:
        - akshay.tomar@agnext.in
+       - ramkrishna@agnext.in
+       - jasdeep.kaur@agnext.in
 
 
 
