--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-cassandra</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-cassandra</artifactId>
+            <version>3.3.4</version>
+        </dependency>
     </dependencies>
 
     <repositories>
